fix: Dark mode handling

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -113,15 +113,15 @@ html, body {
 }
 
 // dark mode
-html.wa-theme-default-dark .only-light,
-html:not(.wa-theme-default-dark) .only-dark {
+html.wa-dark .only-light,
+html:not(.wa-dark) .only-dark {
   display: none;
 }
 
 // customize wa theme
 :root,
 :host,
-.wa-theme-default-light {
+.wa-light {
   /* Changes the brand color to violet across the library */
   --wa-color-brand-fill-quiet: var(--wa-color-violet-95);
   --wa-color-brand-fill-normal: var(--wa-color-violet-90);
@@ -138,7 +138,7 @@ html:not(.wa-theme-default-dark) .only-dark {
   --bulma-footer-background-color: var(--wa-color-gray-80);
 }
 
-.wa-theme-default-dark {
+.wa-dark {
   --wa-color-brand-fill-quiet: var(--wa-color-violet-10);
   --wa-color-brand-fill-normal: var(--wa-color-violet-20);
   --wa-color-brand-fill-loud: var(--wa-color-violet-40);
